--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
     "expo": "~48.0.18",
+    "expo-dev-client": "~2.2.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-google-mobile-ads": "^11.1.1",
-    "expo-dev-client": "~2.2.1"
+    "react-native-google-mobile-ads": "^11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
